# pbl-melhores-compras

./: .gitignore  README.md  main.py  pyproject.toml
Fase 4/: PR_SGV_CARGA_RESUMO_OCORR_SAC.sql
Fase 7/reports/: FiapandoDataScience_PBL_1TSCOA_FASE7.pbix
Fase1-SGV-Genesis-Database-Modeling/: Codigo_Nivel_Atendimento_SAC_Melhores_Compras.py  Script_DDL_Melhores_Compras.sql
Fase2-SGV-DataFlow-Manager/: 1_1_componentes.txt  1_3_comandos_DQL.sql  1_5_arquivo_produto.json  1_6_Programa_sustentabilidade.docx  Arquivo 1_2_comandos_DML.sql  Arquivo 1_4_algoritmo_produto.py
Fase3-SGV-Secure-Logic-PLSQL/: 1_3_PL-SQL_Cursor.sql  1_4_Consulta_DQL.sql
Fase5-SGV-NoSQL-Booster/: FIAPandoDataScience_PBL_TSCOA_1o_Ano_Fase5.ipynb
Fase6-SGV-BigData-Universe/: FIAPandoDataScience_PBL_TSCOA_1o_Ano_Fase6.docx
Fase7-SGV-Insights-PowerBI/data/: Clientes.xml
entregas/: PR_SGV_CARGA_RESUMO_OCORR_SAC.sql  ex_histograma.ipynb  ex_histograma.py
entregas/Fase 4/: ex_histograma.ipynb
entregas/Fase 5/: FIAPandoDataScience_PBL_TSCOA_1o_Ano_Fase5.docx  FIAPandoDataScience_PBL_TSCOA_1o_Ano_Fase5.ipynb  componentes.txt
entregas/Fase 7/: FiapandoDataScience_PBL_1TSCOA_FASE7.docx
entregas/Fase 7/data/: vendas_melhores_compras.xlsx
