[project]
name = "pbl-melhores-compras"
version = "7.0.0"
description = "Projeto contendo todos PBLs do curso de Data Science da FIAP."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = ["jupyter>=1.1.1"]
